# uv_git_deps_bug_b

./: hello.py  pyproject.toml
